--- a/src/app/pagamento/components/pendura/bebum/bebum.component.html
+++ b/src/app/pagamento/components/pendura/bebum/bebum.component.html
@@ -1,49 +1,58 @@
-<form [formGroup]="bebumForm">
-  <div class="form-group row mt-1">
-    <label class="col-2 col-form-label">Nome*</label>
-    <div class="col-10">
-      <input class="form-control" formControlName="nome" type="text" placeholder="Senor Abravanel">
-      <app-vm-error [text]="'O campo Nome é obrigatório'" *ngIf="bebumForm.get('nome').hasError('required')"></app-vm-error>
-      <app-vm-error [text]="'O campo Nome deve conter no mínimo 3 caractes'" *ngIf="bebumForm.get('nome').hasError('minlength')"></app-vm-error>
-      <app-vm-error [text]="'O campo Nome deve conter no maxímo 50 caractes'" *ngIf="bebumForm.get('nome').hasError('maxlength')"></app-vm-error>
-    </div>
+<ngx-smart-modal #clienteModal identifier="clienteModal" customClass="medium-modal">
+  <div class="modal-header pt-0 pl-0 pr-0">
+    <h5 class="modal-title">{{cliente && cliente.apelido ? 'Editar Cliente - ' + cliente.apelido : 'Cadastrar cliente' }}</h5>
   </div>
-  <div class="form-group row mt-1">
-    <label class="col-2 col-form-label">Apelido</label>
-    <div class="col-10">
-      <input class="form-control" formControlName="apelido" type="text" placeholder="Silvio Santos">
-      <app-vm-error [text]="'O campo Apelido deve conter no mínimo 2 caractes'" *ngIf="bebumForm.get('apelido').hasError('minlength')"></app-vm-error>
-      <app-vm-error [text]="'O campo Apelido deve conter no maxímo 50 caractes'" *ngIf="bebumForm.get('apelido').hasError('maxlength')"></app-vm-error>
-    </div>
-  </div>
-  <div class="form-group row mt-1">
-    <label class="col-2 col-form-label">CPF*</label>
-    <div class="col-10">
-      <input class="form-control" formControlName="cpf" mask="000.000.000-00" placeholder="000.000.000-00">
-      <app-vm-error [text]="'O campo CPF é obrigatório'" *ngIf="bebumForm.get('cpf').hasError('required')"></app-vm-error>
-      <app-vm-error [text]="'O campo CPF deve conter 11 dígitos'" *ngIf="bebumForm.get('cpf').hasError('minlength')"></app-vm-error>
-    </div>
-  </div>
-  <div class="form-group row mt-1">
-    <label class="col-2 col-form-label">Celular</label>
-    <div class="col-10">
-      <input class="form-control" formControlName="telefone" mask="(00) 00000-0000" placeholder="(00) 00000-0000">
-      <app-vm-error [text]="'O campo Celular deve conter no mínimo 10 números'" *ngIf="bebumForm.get('telefone').hasError('minlength')"></app-vm-error>
-    </div>
-  </div>
-  <div class="col-md-12 p-0 pt-3 line-modal-footer">
-    <div class="tool-tip" data-toggle="tooltip" data-placement="bottom" title="A busca de bebum é pelo CPF do indivíduo" [hidden]="operacaoDesejada !== 'Pendura'">
-      <button type="button" [disabled]="bebumForm.get('cpf').errors" (click)="retriveBebum(bebumForm.get('cpf').value)" class="btn btn-success col-12 m-0">
-        Buscar
-      </button>
-    </div>
-    <div class="row">
-      <div class="col-6">
-        <button type="button" (click)="cancelar()" class="btn btn-danger col-md-12 ml-0">Cancelar</button>
+  <div class="modal-body pl-0 pr-0">
+    <form [formGroup]="bebumForm">
+      <div class="form-group row mt-1">
+        <label class="col-2 col-form-label">Nome*</label>
+        <div class="col-10">
+          <input class="form-control" formControlName="nome" type="text" placeholder="Senor Abravanel">
+          <app-vm-error [text]="'O campo Nome é obrigatório'" *ngIf="bebumForm.get('nome').hasError('required')"></app-vm-error>
+          <app-vm-error [text]="'O campo Nome deve conter no mínimo 3 caractes'" *ngIf="bebumForm.get('nome').hasError('minlength')"></app-vm-error>
+          <app-vm-error [text]="'O campo Nome deve conter no maxímo 50 caractes'" *ngIf="bebumForm.get('nome').hasError('maxlength')"></app-vm-error>
+        </div>
       </div>
-      <div class="col-6">
-        <button type="button" (click)="selecionarCliente()" [disabled]="bebumForm.invalid" class="btn btn-primary col-md-12 ml-0">Confirmar</button>
+      <div class="form-group row mt-1">
+        <label class="col-2 col-form-label">Apelido</label>
+        <div class="col-10">
+          <input class="form-control" formControlName="apelido" type="text" placeholder="Silvio Santos">
+          <app-vm-error [text]="'O campo Apelido deve conter no mínimo 2 caractes'" *ngIf="bebumForm.get('apelido').hasError('minlength')"></app-vm-error>
+          <app-vm-error [text]="'O campo Apelido deve conter no maxímo 50 caractes'" *ngIf="bebumForm.get('apelido').hasError('maxlength')"></app-vm-error>
+        </div>
       </div>
-    </div>
+      <div class="form-group row mt-1">
+        <label class="col-2 col-form-label">CPF*</label>
+        <div class="col-10">
+          <input class="form-control" formControlName="cpf" mask="000.000.000-00" placeholder="000.000.000-00">
+          <app-vm-error [text]="'O campo CPF é obrigatório'" *ngIf="bebumForm.get('cpf').hasError('required')"></app-vm-error>
+          <app-vm-error [text]="'O campo CPF deve conter 11 dígitos'" *ngIf="bebumForm.get('cpf').hasError('minlength')"></app-vm-error>
+        </div>
+      </div>
+      <div class="form-group row mt-1">
+        <label class="col-2 col-form-label">Celular</label>
+        <div class="col-10">
+          <input class="form-control" formControlName="telefone" mask="(00) 00000-0000" placeholder="(00) 00000-0000">
+          <app-vm-error [text]="'O campo Celular deve conter no mínimo 10 números'" *ngIf="bebumForm.get('telefone').hasError('minlength')"></app-vm-error>
+        </div>
+      </div>
+      <div class="col-md-12 p-0 pt-3 line-modal-footer">
+        <div class="tool-tip" data-toggle="tooltip" data-placement="bottom" title="A busca de bebum é pelo CPF do indivíduo"
+          [hidden]="operacaoDesejada !== 'Pendura'">
+          <button type="button" [disabled]="bebumForm.get('cpf').errors" (click)="retriveBebum(bebumForm.get('cpf').value)"
+            class="btn btn-success col-12 m-0">
+            Buscar
+          </button>
+        </div>
+        <div class="row">
+          <div class="col-6">
+            <button type="button" (click)="cancelar()" class="btn btn-danger col-md-12 ml-0">Cancelar</button>
+          </div>
+          <div class="col-6">
+            <button type="button" (click)="confirmarCliente()" [disabled]="bebumForm.invalid" class="btn btn-primary col-md-12 ml-0">Confirmar</button>
+          </div>
+        </div>
+      </div>
+    </form>
   </div>
-</form>
+</ngx-smart-modal>
