--- a/src/app/venda/components/produto/produto.component.html
+++ b/src/app/venda/components/produto/produto.component.html
@@ -1,6 +1,6 @@
 <ngx-smart-modal #produtoModal identifier="produtoModal">
   <div class="modal-header pt-0 pl-0 pr-0">
-    <h5 class="modal-title">Cadastrar produto</h5>
+      <h5 class="modal-title">{{produto && produto.nome ? 'Editar Produto - ' + produto.nome : 'Cadastrar produto' }}</h5>
   </div>
   <div class="modal-body pl-0 pr-0">
     <form [formGroup]="produtoForm">
