implementacao de cards sem controle de estoque

--- a/src/app/shared/components/bt-card/bt-card.component.html
+++ b/src/app/shared/components/bt-card/bt-card.component.html
@@ -3,7 +3,6 @@
     <div class="card-title">
       <span>{{title}}</span>
     </div>
-    <div class="card-subtitle mb-2 text-success">{{subtitle | currency : 'BRL'}}</div>
-    <div class="card-text">Qtde em Estoque: {{text}}</div>
+    <ng-content> </ng-content>
   </div>
 </div>
