--- a/src/app/pagamento/components/pagamento/pagamento.component.html
+++ b/src/app/pagamento/components/pagamento/pagamento.component.html
@@ -81,6 +81,7 @@
             </div>
           </div>
         </div>
+        <button class="btn btn-sm btn-primary mt-2">Aplicar Desconto</button>
       </div>
     </div>
   </div>
