implementações para exibir o código de barra do produto

--- a/src/app/venda/components/venda/adicionar-produto/adicionar-produto.component.html
+++ b/src/app/venda/components/venda/adicionar-produto/adicionar-produto.component.html
@@ -12,11 +12,16 @@
     <form [formGroup]="addForm">
       <div class="form-group mt-1">
         <label>Quantidade</label>
-        <input type="text" class="form-control" formControlName="quantidade" mask="0?000000000"  placeholder="1"/>
+        <input type="text" class="form-control" formControlName="quantidade" mask="0?000000000" placeholder="1" />
         <app-vm-error text="O campo Quantidade deve ser maior que 0" *ngIf="addForm.get('quantidade').hasError('min')"></app-vm-error>
         <app-vm-error [text]='"O campo Quantidade deve ser menor ou igual a que " + produto.quantidadeEstoque' *ngIf="addForm.get('quantidade').hasError('max')"></app-vm-error>
       </div>
     </form>
+    <button *ngIf="produto.codigoDeBarras" class="btn btn-primary btn-sm btn-block" (click)="toggleBarCode()">Ver
+      código de barra</button>
+    <div [@slideInOut]="animationState" class="barcode">
+      <ngx-barcode bc-value="{{produto.codigoDeBarras + '||' + idVenda}}" [bc-display-value]="false" [bc-width]="1" bc-format="CODE128"></ngx-barcode>
+    </div>
   </div>
   <div class="modal-footer pb-0 pl-0 pr-0">
     <button type="button" (click)="close()" class="btn btn-danger">Cancelar</button>
